# arcadia_reproducibility

./: .dockerignore  .gitmodules  CITATION.cff  LICENSE.txt  README.md  generate_publication_figures_github.ipynb  generate_publication_figures_github.py  run_pipeline.sh  run_pipeline_direct.sh  run_pipeline_notebooks.sh  spatial_sensitivity_plots.ipynb  test_all_execution_methods.sh
ARCADIA/: README.md  pyproject.toml
ARCADIA/configs/: config.json
ARCADIA/environments/: environment_gpu_cuda11.8.yaml  environment_gpu_cuda12.1.yaml  environment_maxfuse.yaml
ARCADIA/environments/docker/: DOCKER_README.md
ARCADIA/scripts/: _0_preprocess_schreiber.py  _0_preprocess_tonsil.py  _1_align_datasets.py  _2_spatial_integrate.py  _3_generate_archetypes.py  _4_prepare_training.py  _5_train_vae.py  _6_post_hoc_analysis.py  hyperparameter_search.py
ARCADIA/src/arcadia/analysis/: __init__.py
ARCADIA/src/arcadia/archetypes/: cell_representations.py  distances.py
ARCADIA/src/arcadia/covet/: utils.py
ARCADIA/src/arcadia/data_utils/: __init__.py  cleaning.py
ARCADIA/src/arcadia/plotting/: post_hoc.py  preprocessing.py  spatial.py  training.py
ARCADIA/src/arcadia/spatial/: __init__.py  neighbors.py
ARCADIA/src/arcadia/training/: __init__.py  dual_vae_training_plan.py  gradnorm.py  loss_scaling.py  metrics.py  utils.py
ARCADIA/src/arcadia/utils/: args.py  environment.py  logging.py  metadata.py
environments/: README.md  environment_gpu_cuda12.4.yaml  environment_scmodal.yaml  requirements.txt
metrics/: results_comparison_cite_seq_scmodal.csv  results_comparison_scmodal_cite_seq_20251212_171649.csv
model_comparison/: Dockerfile.scmodal  compare_results.py  (+5 more)
(+35 files in other folders)
